move option to global org setting
