# server/api/entities.go
@@ -99,20 +99,19 @@ type Group struct {
 // ─── Location ────────────────────────────────────────────────────────────────
 
 type Location struct {
-	ID                       string
-	OrganizationID           string
-	Name                     string
-	MapWidth                 uint
-	MapHeight                uint
-	MapScale                 float64
-	MapMimeType              string
-	MapType                  string
-	Description              string
-	MaxConcurrentBookings    uint
-	Timezone                 string
-	Enabled                  bool
-	BookableDays             string
-	HideForDisallowedBookers bool
+	ID                    string
+	OrganizationID        string
+	Name                  string
+	MapWidth              uint
+	MapHeight             uint
+	MapScale              float64
+	MapMimeType           string
+	MapType               string
+	Description           string
+	MaxConcurrentBookings uint
+	Timezone              string
+	Enabled               bool
+	BookableDays          string
 }
 
 // ─── Space ───────────────────────────────────────────────────────────────────
@@ -323,6 +322,7 @@ var (
 	SettingHideStats                      SettingName = SettingName{Name: "hide_stats", Type: SettingTypeBool}
 	SettingPublicBookingEnabled           SettingName = SettingName{Name: "public_booking_enabled", Type: SettingTypeBool}
 	SettingFeaturePublicBooking           SettingName = SettingName{Name: "feature_public_booking", Type: SettingTypeBool}
+	SettingHideDisallowedLocations        SettingName = SettingName{Name: "hide_disallowed_locations", Type: SettingTypeBool}
 )
 
 // ─── AccountType ─────────────────────────────────────────────────────────────
