# server/repository/location-repository.go
@@ -104,21 +104,15 @@ func (r *LocationStore) RunSchemaUpgrade(curVersion, targetVersion int) {
 			panic(err)
 		}
 	}
-	if curVersion < 61 {
-		if _, err := GetDatabase().DB().Exec("ALTER TABLE locations " +
-			"ADD COLUMN IF NOT EXISTS hide_for_disallowed_bookers boolean NOT NULL DEFAULT FALSE"); err != nil {
-			panic(err)
-		}
-	}
 }
 
 func (r *LocationStore) Create(e *Location) error {
 	var id string
 	err := GetDatabase().DB().QueryRow("INSERT INTO locations "+
-		"(organization_id, name, description, max_concurrent_bookings, tz, enabled, map_type, bookable_days, hide_for_disallowed_bookers) "+
-		"VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9) "+
+		"(organization_id, name, description, max_concurrent_bookings, tz, enabled, map_type, bookable_days) "+
+		"VALUES ($1, $2, $3, $4, $5, $6, $7, $8) "+
 		"RETURNING id",
-		e.OrganizationID, e.Name, e.Description, e.MaxConcurrentBookings, e.Timezone, e.Enabled, e.MapType, e.BookableDays, e.HideForDisallowedBookers).Scan(&id)
+		e.OrganizationID, e.Name, e.Description, e.MaxConcurrentBookings, e.Timezone, e.Enabled, e.MapType, e.BookableDays).Scan(&id)
 	if err != nil {
 		return err
 	}
@@ -128,10 +122,10 @@ func (r *LocationStore) Create(e *Location) error {
 
 func (r *LocationStore) GetOne(id string) (*Location, error) {
 	e := &Location{}
-	err := GetDatabase().DB().QueryRow("SELECT id, organization_id, name, map_mimetype, map_width, map_height, map_scale, map_type, description, max_concurrent_bookings, tz, enabled, bookable_days, hide_for_disallowed_bookers "+
+	err := GetDatabase().DB().QueryRow("SELECT id, organization_id, name, map_mimetype, map_width, map_height, map_scale, map_type, description, max_concurrent_bookings, tz, enabled, bookable_days "+
 		"FROM locations "+
 		"WHERE id = $1",
-		id).Scan(&e.ID, &e.OrganizationID, &e.Name, &e.MapMimeType, &e.MapWidth, &e.MapHeight, &e.MapScale, &e.MapType, &e.Description, &e.MaxConcurrentBookings, &e.Timezone, &e.Enabled, &e.BookableDays, &e.HideForDisallowedBookers)
+		id).Scan(&e.ID, &e.OrganizationID, &e.Name, &e.MapMimeType, &e.MapWidth, &e.MapHeight, &e.MapScale, &e.MapType, &e.Description, &e.MaxConcurrentBookings, &e.Timezone, &e.Enabled, &e.BookableDays)
 	if err != nil {
 		return nil, err
 	}
@@ -140,7 +134,7 @@ func (r *LocationStore) GetOne(id string) (*Location, error) {
 
 func (r *LocationStore) GetByKeyword(organizationID string, keyword string) ([]*Location, error) {
 	var result []*Location
-	rows, err := GetDatabase().DB().Query("SELECT id, organization_id, name, map_mimetype, map_width, map_height, map_scale, map_type, description, max_concurrent_bookings, tz, enabled, bookable_days, hide_for_disallowed_bookers "+
+	rows, err := GetDatabase().DB().Query("SELECT id, organization_id, name, map_mimetype, map_width, map_height, map_scale, map_type, description, max_concurrent_bookings, tz, enabled, bookable_days "+
 		"FROM locations "+
 		"WHERE organization_id = $1 AND LOWER(name) LIKE '%' || $2 || '%' "+
 		"ORDER BY name", organizationID, strings.ToLower(keyword))
@@ -150,7 +144,7 @@ func (r *LocationStore) GetByKeyword(organizationID string, keyword string) ([]*
 	defer rows.Close()
 	for rows.Next() {
 		e := &Location{}
-		err = rows.Scan(&e.ID, &e.OrganizationID, &e.Name, &e.MapMimeType, &e.MapWidth, &e.MapHeight, &e.MapScale, &e.MapType, &e.Description, &e.MaxConcurrentBookings, &e.Timezone, &e.Enabled, &e.BookableDays, &e.HideForDisallowedBookers)
+		err = rows.Scan(&e.ID, &e.OrganizationID, &e.Name, &e.MapMimeType, &e.MapWidth, &e.MapHeight, &e.MapScale, &e.MapType, &e.Description, &e.MaxConcurrentBookings, &e.Timezone, &e.Enabled, &e.BookableDays)
 		if err != nil {
 			return nil, err
 		}
@@ -161,7 +155,7 @@ func (r *LocationStore) GetByKeyword(organizationID string, keyword string) ([]*
 
 func (r *LocationStore) GetAll(organizationID string) ([]*Location, error) {
 	var result []*Location
-	rows, err := GetDatabase().DB().Query("SELECT id, organization_id, name, map_mimetype, map_width, map_height, map_scale, map_type, description, max_concurrent_bookings, tz, enabled, bookable_days, hide_for_disallowed_bookers "+
+	rows, err := GetDatabase().DB().Query("SELECT id, organization_id, name, map_mimetype, map_width, map_height, map_scale, map_type, description, max_concurrent_bookings, tz, enabled, bookable_days "+
 		"FROM locations "+
 		"WHERE organization_id = $1 "+
 		"ORDER BY name", organizationID)
@@ -171,7 +165,7 @@ func (r *LocationStore) GetAll(organizationID string) ([]*Location, error) {
 	defer rows.Close()
 	for rows.Next() {
 		e := &Location{}
-		err = rows.Scan(&e.ID, &e.OrganizationID, &e.Name, &e.MapMimeType, &e.MapWidth, &e.MapHeight, &e.MapScale, &e.MapType, &e.Description, &e.MaxConcurrentBookings, &e.Timezone, &e.Enabled, &e.BookableDays, &e.HideForDisallowedBookers)
+		err = rows.Scan(&e.ID, &e.OrganizationID, &e.Name, &e.MapMimeType, &e.MapWidth, &e.MapHeight, &e.MapScale, &e.MapType, &e.Description, &e.MaxConcurrentBookings, &e.Timezone, &e.Enabled, &e.BookableDays)
 		if err != nil {
 			return nil, err
 		}
@@ -190,10 +184,9 @@ func (r *LocationStore) Update(e *Location) error {
 		"tz = $6, "+
 		"enabled = $7, "+
 		"map_type = $8, "+
-		"bookable_days = $9, "+
-		"hide_for_disallowed_bookers = $10 "+
-		"WHERE id = $11",
-		e.OrganizationID, e.Name, e.Description, e.MaxConcurrentBookings, e.MapScale, e.Timezone, e.Enabled, e.MapType, e.BookableDays, e.HideForDisallowedBookers, e.ID)
+		"bookable_days = $9 "+
+		"WHERE id = $10",
+		e.OrganizationID, e.Name, e.Description, e.MaxConcurrentBookings, e.MapScale, e.Timezone, e.Enabled, e.MapType, e.BookableDays, e.ID)
 	return err
 }
 
